--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-firebase/app": "^12.2.0",
+    "@react-native-firebase/auth": "^12.2.0",
+    "@react-native-picker/picker": "^1.16.3",
     "react": "17.0.1",
     "react-native": "0.64.2"
   },
