--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-firebase/app": "^12.2.0",
     "@react-native-firebase/auth": "^12.2.0",
+    "@react-native-firebase/firestore": "^12.2.0",
     "@react-native-picker/picker": "^1.16.3",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
